# spike-control-flow

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alfred/: lint.py  run.py
src/app/: spike1.py  spike10.py  spike2.py  spike3.py  spike4.py  spike5.py  spike6.py  spike7.py  spike8.py  spike9.py
